--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
+    "next": "^12.1.6",
+    "react": "^18.1.0",
     "react-dom": "18.1.0",
     "reactstrap": "^9.1.1"
   },
