--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "add": "^2.0.6",
+    "bootstrap": "^5.1.3",
+    "cleave.js": "^1.6.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-bootstrap-v5": "^1.4.0",
+    "react-dom": "18.1.0",
+    "reactstrap": "^9.1.1",
+    "sweetalert2": "^11.4.17",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "eslint": "8.16.0",
