--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bootstrap": "^5.1.3",
     "cleave.js": "^1.6.0",
     "next": "12.1.6",
-    "react": "18.1.0",
+    "react": "^18.1.0",
     "react-bootstrap-v5": "^1.4.0",
     "react-dom": "18.1.0",
     "reactstrap": "^9.1.1",
